# silly-alloc

./: Cargo.toml  LICENSE  README.md  docs.sh
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: alloc.rs
e2e/: Cargo.toml  Cargo.toml.tpl  lib.rs  test1.rs
e2e/src/: lib.rs
silly-alloc-macros/: Cargo.toml  README.md
silly-alloc-macros/src/: cast_helpers.rs  lib.rs
src/: arena_bump.rs  bucket.rs  bump.rs  e2e_tests.rs  head.rs  lib.rs  on_heap.rs  result.rs  wasm.rs  wasm_page_bump.rs
src/bucket/: mod.rs
src/bump/: head.rs  mod.rs  wasm.rs
tests/: e2e.rs  page_growth.rs  page_growth_threaded.rs  simple_allocator.rs
wasm-alloc-macros/: Cargo.toml
wasm-alloc-macros/src/: cast_helpers.rs  lib.rs
wasm-alloc-macros/tests/: simple.rs
