[package]
name = "silly-alloc"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "A collection of very basic allocators."
repository = "https://github.com/surma/silly-alloc"
license = "Apache-2.0"
authors = ["Surma <surma@surma.dev>"]

[dependencies]
bytemuck = "1.13.1"
silly-alloc-macros = { path = "./silly-alloc-macros" }

[dev-dependencies]
anyhow = "1.0.69"
serde = "1.0.158"
tinytemplate = "1.2.1"
xorshift = "0.1.3"

[workspace]
members = [
  "silly-alloc-macros"
]
